# py.lockfile

./: .flake8  .gitignore  README.md  py_lockfile.py  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_base.py
