[project]
name = "py.lockfile"
version = "0.1.0"
description = "This is a simple tool for download python packages managed by lock file."
authors = [
    {name = "Martin Korbel", email = "git@blackserver.cz"},
]
dependencies = [
    "toml>=0.10.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
"py.lockfile" = "py_lockfile:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
